--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
-   TESTETSETSETSETEST
+   TESTETSETSETSETESTer
   </body>
 </html>
->>>>>>> refs/remotes/origin/gh-pages
+
