Added on clicks

--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   </head>
   <body>
-	<button type="button" class="btn btn-primary">Start Music</button><br>
-	<button type="button" class="btn btn-primary">End Music</button><br>
-	<button type="button" class="btn btn-primary">Random</button><br>
-	<button type="button" class="btn btn-primary">Pass 1 Right</button><br>
-	<button type="button" class="btn btn-primary">Pass 2 Right</button><br>
-	<button type="button" class="btn btn-primary">Partners</button><br>
-	<button type="button" class="btn btn-primary">Pass 1 Left</button><br>
-	<button type="button" class="btn btn-primary">Pass 3 Right</button><br>
- 		
+  	<div class="well">
+	<button type="button" class="btn btn-primary" onClick="StartMusic()">Start Music</button><br><br>
+	<button type="button" class="btn btn-primary" onClick="EndMusic()">End Music</button><br><br>
+	<button type="button" class="btn btn-primary" onClick="StartMusic()">Random</button><br><br>
+	<button type="button" class="btn btn-primary" onClick="StartMusic()">Pass 1 Right</button><br><br>
+	<button type="button" class="btn btn-primary" onClick="StartMusic()">Pass 2 Right</button><br><br>
+	<button type="button" class="btn btn-primary" onClick="StartMusic()">Partners</button><br><br>
+	<button type="button" class="btn btn-primary" onClick="StartMusic()">Pass 1 Left</button><br><br>
+	<button type="button" class="btn btn-primary" onClick="StartMusic()">Pass 3 Right</button><br><br>
+ 		</div>
 
 
     
