--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 	<button type="button" class="btn btn-primary" onClick="Pass3r()">Pass 3 Right</button><br><br>
  		</div>
 
+   <div class="header">Passing Timer:</div>
+
+   <div class="timer" id="timer">05:00</div> 
+   <div class="buttons">
+      <button onclick="startTimer()" id="button1">Start</button>
+      <button onclick="stopTimer()" id = "button2">Stop</button>
+   </div>
 
 	<audio loop id="bgmusic">
 		<source src="./sounds/first-noel-r&b.mp3" type="audio/mpeg">
@@ -59,6 +66,37 @@
   	var pass2r = document.getElementById("pass2r");
   	var pass3r = document.getElementById("pass3r");
   	var partners = document.getElementById("partners");
+  	var w = null; // initialize variable
+  	
+  	// function to start the timer
+function startTimer()
+{
+   // First check whether Web Workers are supported
+   if (typeof(Worker)!=="undefined"){
+      // Check whether Web Worker has been created. If not, create a new Web Worker based on the Javascript file simple-timer.js
+      if (w==null){
+         w = new Worker("simple-timer.js");
+      }
+      // Update timer div with output from Web Worker
+      w.onmessage = function (event) {
+         document.getElementById("timer").innerHTML = event.data;
+      };
+   } else {
+      // Web workers are not supported by your browser
+      document.getElementById("timer").innerHTML = "Sorry, your browser does not support Web Workers ...";
+   }
+}
+
+// function to stop the timer
+function stopTimer()
+{
+   w.terminate();
+   timerStart = true;
+   w = null;
+}
+</script>
+
+</html>
   	function randomFrom(array) {return array[Math.floor(Math.random() * array.length)];}
   	function StartMusic(){
   		console.log("StartMusic");
