--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <option value="30">30</option>
   <option value="60">60</option>
 	</select>
-	div>
+	</div>
    
      <div>
  <div class="header">Partners?:</div>
@@ -41,7 +41,7 @@
   <option value="yes">yes</option>
   <option value="no">no</option>
   	</select>
-	div>
+	</div>
    
    <div class="header">Passing Timer:</div>
 
