--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 	      	
 	         document.getElementById("timer").innerHTML = event.data;
 	         var times = event.data.split(":");
-	         if ((parseInt(times[1])%iInterval == 0) && !playedalready)
+	         if ((parseInt(times[1])%20 == 0) && !playedalready)
 	         {
 	         	if (strPartner == "yes")
 	         	{
@@ -119,7 +119,7 @@
 	         	}
 	         	playedalready = true
 	         }
-	         if (parseInt(times[1])%iInterval == 5)
+	         if (parseInt(times[1])%20 == 5)
 	         {
 	         	playedalready = false;
 	         }
