--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<button type="button" class="btn btn-primary" onClick="Pass3r()">Pass 3 Right</button><br><br>
  		</div>
    <div>
- <div class="header">Interval Choice:</div>
+ <div >Interval Choice:</div>
  	<select id="ddlInterval">
   <option value="10">10</option>
   <option value="15">15</option>
@@ -36,7 +36,7 @@
 	</div>
    
      <div>
- <div class="header">Partners?:</div>
+ <div >Partners?:</div>
  	<select id="ddlPartner">
   <option value="yes">yes</option>
   <option value="no">no</option>
