--- a/index.html
+++ b/index.html
@@ -24,6 +24,26 @@
 	<button type="button" class="btn btn-primary" onClick="Pass1l()">Pass 1 Left</button><br><br>
 	<button type="button" class="btn btn-primary" onClick="Pass3r()">Pass 3 Right</button><br><br>
  		</div>
+ 	<div>
+ 	 <div >Interval Choice:</div>
+ 	<select id="ddlInterval">
+	  <option value="10">10</option>
+	  <option value="15">15</option>
+	  <option value="20">20</option>
+	  <option value="30">30</option>
+	  <option value="60">60</option>
+	</select>
+	</div>
+   
+     <div>
+	 <div >Partners?:</div>
+	 	<select id="ddlPartner">
+		  <option value="yes">yes</option>
+		  <option value="no">no</option>
+	  	</select>
+	</div>
+ 		
+ 		
 
    <div class="header">Passing Timer:</div>
 
