--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  	<select id="ddlInterval">
 	  <option value="10">10</option>
 	  <option value="15">15</option>
-	  <option value="20">20</option>
+	  <option value="20" selected="selected">20</option>
 	  <option value="30">30</option>
 	  <option value="60">60</option>
 	</select>
@@ -38,7 +38,7 @@
      <div>
 	 <div >Partners?:</div>
 	 	<select id="ddlPartner">
-		  <option value="yes">yes</option>
+		  <option value="yes" selected="selected">yes</option>
 		  <option value="no">no</option>
 	  	</select>
 	</div>
