--- a/index.html
+++ b/index.html
@@ -101,10 +101,9 @@
 	      // Update timer div with output from Web Worker
 	      w.onmessage = function (event) {
 	         document.getElementById("timer").innerHTML = event.data;
-	        var e = document.getElementById("ddlPartner");
- -		var strPartner = e.options[e.selectedIndex].value;
- -		var f = document.getElementById("ddlInterval");
- -		var iInterval = parseInt(f.options[f.selectedIndex].value);
+	        var strPartner = document.getElementById("ddlPartner").value;
+  -		var iInterval = parseInt(document.getElementById("ddlInterval").value);
+ 
 	        
 	        var times = event.data.split(":");
 	         if ((parseInt(times[1])%30 == 0) && !playedalready)
