--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 	      // Update timer div with output from Web Worker
 	      w.onmessage = function (event) {
 	         document.getElementById("timer").innerHTML = event.data;
-	        var strPartner = document.getElementById("ddlPartner").value;
+	        //var strPartner = document.getElementById("ddlPartner").value;
   -		var iInterval = parseInt(document.getElementById("ddlInterval").value);
  
 	        
