--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 	      w.onmessage = function (event) {
 	         document.getElementById("timer").innerHTML = event.data;
 	        //var strPartner = document.getElementById("ddlPartner").value;
-  -		var iInterval = parseInt(document.getElementById("ddlInterval").value);
+  -		//var iInterval = parseInt(document.getElementById("ddlInterval").value);
  
 	        
 	        var times = event.data.split(":");
