--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
   	var pass2r = document.getElementById("pass2r");
   	var pass3r = document.getElementById("pass3r");
   	var partners = document.getElementById("partners");
+  	var ddlpartner = document.getElementById("ddlPartner")
+  	var ddlinterval = document.getElementById("ddlInterval")
   	var w = null; // initialize variable
   	var playedalready = false;
   	
@@ -101,6 +103,7 @@
 	      // Update timer div with output from Web Worker
 	      w.onmessage = function (event) {
 	         document.getElementById("timer").innerHTML = event.data;
+	         
 	         var times = event.data.split(":");
 	         if ((parseInt(times[1])%30 == 0) && !playedalready)
 	         {
