--- a/index.html
+++ b/index.html
@@ -107,7 +107,15 @@
 	         var times = event.data.split(":");
 	         if ((parseInt(times[1])%parseInt(ddlinterval.value) == 0) && !playedalready)
 	         {
+	         	if (ddlpartner.value =="yes")
+	         	{
 	         	RandomPlay();
+	         	}
+	         	else
+	         	{
+	         	RandomPlayNoPartner();	
+	         	}
+	         	}
 	         	playedalready = true
 	         }
 	         if (parseInt(times[1])%parseInt(ddlinterval.value) == 5)
