--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
   	var pass2r = document.getElementById("pass2r");
   	var pass3r = document.getElementById("pass3r");
   	var partners = document.getElementById("partners");
-  	var ddlpartner = document.getElementById("ddlPartner")
-  	var ddlinterval = document.getElementById("ddlInterval")
+  	var ddlpartner = document.getElementById("ddlPartner");
+  	var ddlinterval = document.getElementById("ddlInterval");
   	var w = null; // initialize variable
   	var playedalready = false;
   	
