--- a/index.html
+++ b/index.html
@@ -86,8 +86,6 @@
   	var pass2r = document.getElementById("pass2r");
   	var pass3r = document.getElementById("pass3r");
   	var partners = document.getElementById("partners");
-  	var ddlpartner = document.getElementById("ddlPartner");
-  	var ddlinterval = document.getElementById("ddlInterval");
   	var w = null; // initialize variable
   	var playedalready = false;
   	
@@ -103,22 +101,13 @@
 	      // Update timer div with output from Web Worker
 	      w.onmessage = function (event) {
 	         document.getElementById("timer").innerHTML = event.data;
-	         
 	         var times = event.data.split(":");
-	         if ((parseInt(times[1])%parseInt(ddlinterval.value) == 0) && !playedalready)
+	         if ((parseInt(times[1])%30 == 0) && !playedalready)
 	         {
-	         	if (ddlpartner.value =="yes")
-	         	{
 	         	RandomPlay();
-	         	}
-	         	else
-	         	{
-	         	RandomPlayNoPartner();	
-	         	}
-	         	}
 	         	playedalready = true
 	         }
-	         if (parseInt(times[1])%parseInt(ddlinterval.value) == 5)
+	         if (parseInt(times[1])%30 == 5)
 	         {
 	         	playedalready = false;
 	         }
