--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
 		  <option value="no">no</option>
 	  	</select>
 	</div>
+	<div>
+		 <div >Stop (Minutes)?:</div>
+	 	<select id="ddlStop">
+		  <option value="2" selected="selected">2</option>
+		  <option value="5">5</option>
+		  <option value="10">10</option>
+		  <option value="20">20</option>
+	  	</select>
+	</div>
  		
  		
 
