--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
   	var partners = document.getElementById("partners");
   	var ddlinterval = document.getElementById("ddlInterval");
   	var ddlpartner = document.getElementById("ddlPartner");
+  	var ddlstop = document.getElementById("ddlStop");
   	var w = null; // initialize variable
   	var playedalready = false;
   	
@@ -123,6 +124,11 @@
 	         {
 	         	playedalready = false;
 	         }
+	         if (parseInt(times[0]) == parseInt(ddlstop.value))
+	         {
+	         	stopTimer();
+	         	playedalready = false;
+	         }
 	         
 	         
 	      };
@@ -136,6 +142,7 @@
 	function stopTimer()
 	{
 	   w.terminate();
+	   PauseMusic();
 	   timerStart = true;
 	   w = null;
 	}
