--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 	         		
 	         	RandomPlayNoPartner();
 	         	}
-	         	playedalready = true
+	         	playedalready = true;
 	         }
 	         if (parseInt(times[1])%parseInt(ddlinterval.value) == 5)
 	         {
